test-cases/type_error.exp
test-cases/type_error.wybe:1:31: Type error in call to *, argument 1
